kubernetes/navidrome/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  namespace: homelab
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: navidrome
  template:
    metadata:
      labels:
        app: navidrome
    spec:
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 4533
        volumeMounts:
        - name: config
          mountPath: /data
        - name: music
          mountPath: /music
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: navidrome-config-pvc
      - name: music
        hostPath:
          path: /media/music
