kubernetes/navidrome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  namespace: homelab
spec:
  selector:
    app: navidrome
  ports:
  - port: 4533
    targetPort: 4533
  type: ClusterIP
