kubernetes/navidrome/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: navidrome
  namespace: homelab
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - music.sigilos.st
    secretName: navidrome-tls
  rules:
  - host: music.sigilos.st
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: navidrome
            port:
              number: 4533
